--- a/frontend/investimentos.html
+++ b/frontend/investimentos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carteira de Investimentos - omeuplannerfinanceiro</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     
     <style>
         /* Estilo para simular o Gráfico de Rosca/Pizza (Donut Chart) */
